--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --watch 'src/*/.ts' --exec 'ts-node' src/crawler.ts"
+        "dev": "nodemon --watch 'src/*/.ts' --exec 'ts-node' src/index.ts"
     },
     "keywords": [],
     "author": "",
@@ -16,10 +16,15 @@
     },
     "dependencies": {
         "@types/cheerio": "^0.22.30",
+        "@types/cookie-session": "^2.0.43",
+        "@types/express": "^4.17.13",
         "@types/superagent": "^4.1.12",
         "@types/superagent-proxy": "^2.0.0",
         "cheerio": "^1.0.0-rc.10",
+        "cookie-session": "^1.4.0",
+        "express": "^4.17.1",
         "opencc": "^1.1.2",
+        "reflect-metadata": "^0.1.13",
         "superagent": "^6.1.0",
         "superagent-proxy": "^2.1.0",
         "typescript": "^4.3.5"
