--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-    "name": "ts-crawler",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon --watch 'src/*/.ts' --exec 'ts-node' src/index.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@commitlint/cli": "^13.1.0",
-        "@commitlint/config-conventional": "^13.1.0",
-        "husky": "^7.0.1"
-    },
-    "dependencies": {
-        "@types/cheerio": "^0.22.30",
-        "@types/cookie-session": "^2.0.43",
-        "@types/express": "^4.17.13",
-        "@types/superagent": "^4.1.12",
-        "@types/superagent-proxy": "^2.0.0",
-        "cheerio": "^1.0.0-rc.10",
-        "cookie-session": "^1.4.0",
-        "express": "^4.17.1",
-        "opencc": "^1.1.2",
-        "reflect-metadata": "^0.1.13",
-        "superagent": "^6.1.0",
-        "superagent-proxy": "^2.1.0",
-        "typescript": "^4.3.5"
-    }
+  "name": "ts-crawler",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --watch 'src/*/.ts' --exec 'ts-node' src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "husky": "^7.0.1",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.0"
+  },
+  "dependencies": {
+    "@types/cheerio": "^0.22.30",
+    "@types/cookie-session": "^2.0.43",
+    "@types/express": "^4.17.13",
+    "@types/superagent": "^4.1.12",
+    "@types/superagent-proxy": "^2.0.0",
+    "cheerio": "^1.0.0-rc.10",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "opencc": "^1.1.2",
+    "reflect-metadata": "^0.1.13",
+    "superagent": "^6.1.0",
+    "superagent-proxy": "^2.1.0",
+    "typescript": "^4.3.5"
+  }
 }
